[project]
name = "a2a-sdk-guide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.4",
    "dotenv>=0.9.9",
    "google-adk>=1.0.0",
    "langchain-core>=0.3.61",
    "langchain-google-genai>=2.1.4",
    "langgraph>=0.4.7",
    "python-a2a>=0.5.6",
    "uvicorn>=0.34.2",
]
